--- a/casestudies.html
+++ b/casestudies.html
@@ -21,16 +21,16 @@
       <a class="navbar-brand" href="/">Springhouse</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/casestudies">Case Studies</a>
+          <a class="nav-link" href="casestudies.html">Case Studies</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/press">Press</a>
+          <a class="nav-link" href="press.html">Press</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
