--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="casestudies.html">Case Studies</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="casestudies.html">Case Studies</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
+            <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
+            <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
+            <a class="dropdown-item" href="bedstuy.html">Bed-Stuy</a>
+            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="press.html">Press</a>
@@ -42,7 +51,7 @@
         <img class="home-carousel-img" src="img/home.jpg">
       </div>
     </div>
-    <div class="row gutters">
+    <div class="row home-text">
       <div class="col-sm-6">
         <p class="text-xs-left subtitle">Overview</p>
         <hr>
@@ -52,27 +61,36 @@
       <div class="col-sm-3">
         <p class="text-xs-left subtitle">Address</p>
         <hr>
-        <p>Springhouse Partners<br>320 Fifth Avenue, Suite 800<br>New York, NY 10001</p>
+        <a href="">
+          <p>Springhouse Partners
+            <br>320 Fifth Avenue, Suite 800
+            <br>New York, NY 10001</p>
+        </a>
       </div>
       <div class="col-sm-3">
         <p class="text-xs-left subtitle">Contact</p>
         <hr>
-        <p>info@springhousepartners.com</p>
+        <a href="mailto:info@springhousepartners.com">
+          <p>info@springhousepartners.com</p>
+        </a>
         <hr>
-        <p>+1 212 982 2022</p>
+        <a href="tel:12129822022">
+          <p>+1 212 982 2022</p>
+        </a>
         <hr>
       </div>
     </div>
   </div>
 
   <footer>
-    <div class="container-fluid gutters">
+    <div class="container-fluid">
       <div class="row">
+        <hr class="footer-hr">
         <div class="col-xs-8">
           <p class="text-xs-left">Springhouse Partners, LLC</p>
         </div>
         <div class="col-xs-4">
-          <p class="text-xs-right">Address</p>
+          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
         </div>
       </div>
     </div>
