--- a/irvingplace.html
+++ b/irvingplace.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="casestudies.html">Case Studies</a>
             <div class="dropdown-divider"></div>
@@ -45,36 +45,44 @@
     </div>
   </nav>
 
-  <div class="container-fluid" id="cases">
+  <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-6">
-        <div class="case C1">
-          <p>Irving Place</p>
-        </div>
+      <div class="col-sm-3">
+        <p class="subtitle">Case Study</p>
+        <h1>Irving Place</h1>
+        <hr>
+        <p>Situated in a striking location on the corner of Irving Place and 17th St, this property occupies one of the most desirable sites in the city. Having been severely mismanaged by its prior owners, Springhouse saw a unique opportunity here to overhaul
+          the property and bring in tenants willing to pay a premium for an address in Gramercy Park. The property includes 46,500 square feet of apartment units, retail, and oﬃce space, with current rents set far below fair market rates. Springhouse
+          plans to renovate the building to attract retail tenants that better ft this upscale neighborhood. The renovations will include signifcant improvements to the gym and laundry room as well. Springhouse will bring rents for the mix of studio,
+          one, and two bed apartments to levels more in line with the surrounding properties.</p>
+        <hr>
+        <p>56 apts, 5 retail spaces, 1 oﬃce space</p>
+        <hr>
+        <p>6 story elevator building</p>
+        <hr>
+        <p>8,300 square feet of retail space</p>
+        <hr>
+        <img class="roundmap" src="img/roundmap.png">
       </div>
       <div class="col-sm-6">
-        <div class="case C2">
-          <p>Columbia University</p>
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="img/Irving_Place.JPG">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="img/fancyroom.jpg">
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="case C3">
-          <p>Miami Beach</p>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="case C4">
-          <p>Williamsburg</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="case C5">
-          <p>Bed-Stuy</p>
-        </div>
+      <div class="col-sm-3">
+        <img src="img/122-East-23rd-Street.jpg">
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <img class="img-circle" src="img/unionsquare.jpg">
+        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
