--- a/press.html
+++ b/press.html
@@ -24,10 +24,19 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="casestudies.html">Case Studies</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="casestudies.html">Case Studies</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
+            <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
+            <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
+            <a class="dropdown-item" href="bedstuy.html">Bed-Stuy</a>
+            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="press.html">Press</a>
+          <a class="nav-link active" href="press.html">Press</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -36,33 +45,79 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
+  <div class="container-fluid" id="press">
     <div class="row">
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/nylogo.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Springhouse pays $55,000,000 for Union Square gem</h1>
+        <hr>
+        <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property.
+          <br>The six-story, 50,000-square-foot building at 51 Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property also has a roughly 10,000-square-foot commercial component holding five
+          retail tenants and one oﬃce unit.</p>
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/wallstreetjournal+logo.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Uptown Maintains Upside</h1>
+        <hr>
+        <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early.
+          <br>Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was Treetop Development, a New Jersey investment
+          company that bought them for $8.8 million in 2012.
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/Commercial-Observer.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Springhouse pays $18,200,000 for Brooklyn apt building</h1>
+        <hr>
+        <p>Springhouse Partners has teamed up with Avenue Realty Capital in the $18.2 million oﬀ-market purchase of 902-908 Bedford Avenue, The Commercial Observer has learned.
+          <br>The 65,000-square-foot building is located in the Clinton Hill neighborhood of Brooklyn, just a few blocks from the Pratt Institute.
+          <br>“This area has seen signifcant positive changes over the past few years and we expect it to continue to gentrify,” said Adam Verner, president of Springhouse Partners, noting that $280 per square foot was a relative bargain compared to similar
+          properties in the neighborhood.</p>
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/rew_logo2.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Young guns set their sights on becoming tomorrow’s real estate success stories</h1>
+        <hr>
+        <p>The city’s young real estate entrepreneurs are using unique investment strategies to become tomorrow’s success stories.
+          <br>In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them.
+          <br>“Because I’m young, I tend to be a little bit more selective with the properties we invest in,” said 32-year-old Adam Verner, who founded Springhouse Partners in 2010. “It’s very important to me to make prudent investment decisions to be sure
+          that these frst few deals are successful.”</p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/APAlogo.jpg">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
+        <hr>
+        <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000.
+          <br>Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer, a private investor. “With newly renovated units delivered upon closing the buyer was
+          able to capitalize on the scale of the property with an immediate increase in cash fow,” said Scot Hirschfeld, Vice President at Ariel Property Advisors.</p>
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/Commercial-Observer.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Springhouse Pays $16,000,000 for 2nd Brooklyn Acquisition in Recent Months</h1>
+        <hr>
+        <p>Springhouse Partners has purchased 105 Grand Avenue, a 38,500-square-foot, newly-constructed residential building in the Clinton Hill section of Brooklyn for $16 million, sources tell The Commercial Observer.</p>
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/miamilogo.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Springhouse acquires prime mixed use asset in the heart of Miami Beach for $21,000,000</h1>
+        <hr>
+        <p>A prime piece of Alton Road real estate sold for $21 million to a partnership of New York investors, according to Miami-Dade County records.
+          <br>The five-story mixed-use property at 1700 Alton Road in Miami Beach includes retail, apartments and parking, according to a listing, and was built in 1923.
+          <br>AC 1700 Alton Owner, an LLC with the same address as New York-based Springhouse Partners, was the listed </p>
       </div>
       <div class="col-sm-3">
-        <h1 class="text-xs-center">Article</h1>
+        <img class="press-logo" src="img/Commercial-Observer.png">
+        <hr>
+        <h1 class="text-xs-center quote-sm">Springhouse Pays $16,000,000 for 2nd Brooklyn Acquisition in Recent Months</h1>
+        <hr>
+        <p>Springhouse Partners has purchased 105 Grand Avenue, a 38,500-square-foot, newly-constructed residential building in the Clinton Hill section of Brooklyn for $16 million, sources tell The Commercial Observer.<br>The sale was an oﬀ-market deal brokered by Sean Lefkovits, Joe Koicim and Peter Von Der Ahe of Marcus &amp; Millichap; and </p>
       </div>
     </div>
   </div>
@@ -70,11 +125,12 @@
   <footer>
     <div class="container-fluid">
       <div class="row">
+        <hr class="footer-hr">
         <div class="col-xs-8">
           <p class="text-xs-left">Springhouse Partners, LLC</p>
         </div>
         <div class="col-xs-4">
-          <p class="text-xs-right">Address</p>
+          <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
         </div>
       </div>
     </div>
