--- a/williamsburg.html
+++ b/williamsburg.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="casestudies.html">Case Studies</a>
             <div class="dropdown-divider"></div>
@@ -45,36 +45,43 @@
     </div>
   </nav>
 
-  <div class="container-fluid" id="cases">
+  <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-6">
-        <div class="case C1">
-          <p>Irving Place</p>
-        </div>
+      <div class="col-sm-3">
+        <p class="subtitle">Case Study</p>
+        <h1>Williamsburg</h1>
+        <hr>
+        <p>With this property, Springhouse identifed an opportunity to tap into the burgeoning creative class of East Williamsburg, an area that has become an attractive alternative to the East Village and Lower East Side. The property’s location in a vibrant
+          neighborhood and close proximity to public transit attracts a young demographic of creative professionals and college students. The property also boasts unique architecture and extensive amenities, including a gym, game room, and a massive rooftop
+          deck with views of the Manhattan skyline. The apartments, which include individual AC units and a video security system, can be converted into shared apartments to meet the needs of young tenants.</p>
+        <hr>
+        <p>32 loft-style apartments</p>
+        <hr>
+        <p>4 story building</p>
+        <hr>
+        <p>3000 square foot roof deck</p>
+        <hr>
+        <img class="roundmap" src="img/williamsburg-map.png">
       </div>
       <div class="col-sm-6">
-        <div class="case C2">
-          <p>Columbia University</p>
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="img/Miami_Beach.JPG">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="img/IMG_0238.JPG">
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="case C3">
-          <p>Miami Beach</p>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="case C4">
-          <p>Williamsburg</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="case C5">
-          <p>Bed-Stuy</p>
-        </div>
+      <div class="col-sm-3">
+        <img src="img/122-East-23rd-Street.jpg">
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <img class="img-circle" src="img/walking.jpg">
+        <p>Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
   </div>
