--- a/casestudies.html
+++ b/casestudies.html
@@ -48,33 +48,43 @@
   <div class="container-fluid" id="cases">
     <div class="row">
       <div class="col-sm-6">
-        <div class="case C1">
-          <p>Irving Place</p>
-        </div>
+        <a href="irvingplace.html">
+          <div class="case C1">
+            <p>Irving Place</p>
+          </div>
+        </a>
       </div>
       <div class="col-sm-6">
-        <div class="case C2">
-          <p>Columbia University</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="case C3">
-          <p>Miami Beach</p>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="case C4">
-          <p>Williamsburg</p>
-        </div>
+        <a href="columbiauniversity.html">
+          <div class="case C2">
+            <p>Columbia University</p>
+          </div>
+        </a>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <div class="case C5">
-          <p>Bed-Stuy</p>
-        </div>
+        <a href="miamibeach.html">
+          <div class="case C3">
+            <p>Miami Beach</p>
+          </div>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href="williamsburg.html">
+          <div class="case C4">
+            <p>Williamsburg</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <a href="bedstuy.html">
+          <div class="case C5">
+            <p>Bed-Stuy</p>
+          </div>
+        </a>
       </div>
     </div>
   </div>
