--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="container-fluid">
       <div class="row">
         <hr class="footer-hr">
-        <div class="col-xs-8">
+        <div class="col-xs-6 col-sm-8">
           <p class="text-xs-left">Springhouse Partners, LLC</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-6 col-sm-4">
           <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
         </div>
       </div>
