--- a/contact.html
+++ b/contact.html
@@ -69,10 +69,10 @@
     <div class="container-fluid">
       <div class="row">
         <hr class="footer-hr">
-        <div class="col-xs-8">
+        <div class="col-xs-6 col-sm-8">
           <p class="text-xs-left">Springhouse Partners, LLC</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-6 col-sm-4">
           <p class="text-xs-right">320 Fifth Avenue, Suite 800 New York, NY 10001</p>
         </div>
       </div>
@@ -95,7 +95,7 @@
       var mapOptions = {
         // How zoomed in you want the map to start at (always required)
         zoom: 15,
-
+        scrollwheel: false,
         // The latitude and longitude to center the map (always required)
         center: new google.maps.LatLng(40.7472385, -73.9877219), // New York
 
