--- a/about.html
+++ b/about.html
@@ -106,8 +106,12 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 arrows-img-6">
+        <a class="about-carousel-open" href="#lb1"></a>
         <img class="media-fw" src="img/about-img.png">
+        <a href="#_" class="lightbox" id="lb1">
+          <img src="img/about-img.png">
+        </a>
       </div>
     </div>
   </div>
