--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 
   <div class="container-fluid" id="home">
     <div class="row home-carousel">
-      <div class="col-xs-12">
+      <div class="col-xs-12 arrows-img">
+        <a class="home-carousel-open" href="#lb1"></a>
         <img class="home-carousel-img" src="img/home.jpg">
+        <a href="#_" class="lightbox" id="lb1">
+          <img src="img/home.jpg">
+        </a>
       </div>
     </div>
     <div class="row home-text">
@@ -77,7 +81,7 @@
         <a href="tel:12129822022">
           <p>+1 212 982 2022</p>
         </a>
-        <hr>
+        <hr class="hidden-xs-down">
       </div>
     </div>
   </div>
