--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       &#9776;
     </button>
     <div class="collapse navbar-toggleable-xs" id="topNav">
-      <a class="navbar-brand" href="/">Springhouse</a>
+      <a class="navbar-brand" href="index.html">Springhouse</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" href="about.html">About</a>
