--- a/about.html
+++ b/about.html
@@ -24,10 +24,8 @@
           <a class="nav-link active" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="casestudies.html">Case Studies</a>
+          <a class="nav-link" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="casestudies.html">Case Studies</a>
-            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
             <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
@@ -51,7 +49,7 @@
         <div class="row">
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
-          <div class="col-sm-6">
+          <div class="col-sm-6 ourStory">
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
               quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
               eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
@@ -60,7 +58,7 @@
           <div class="col-sm-6">
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
             <hr>
-            <p class="quote text-xs-center">Success is an iceberg</p>
+            <p class="quote text-xs-center">Combining entrepreneurial spirit with institutional execution</p>
             <hr>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit laborum.</p>
           </div>
